{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 123,
  "lineage": "26565213-8892-2198-8ad4-bd09d8bbbecc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "tf_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ff9679a94a47f347",
            "association_id": "eipassoc-0d7dc933026b36256",
            "domain": "vpc",
            "id": "eipalloc-0ff9679a94a47f347",
            "instance": "i-091dae7d2d1be0fa7",
            "network_border_group": "us-east-1",
            "network_interface": "eni-08e572fcfc8d0c03d",
            "private_dns": "ip-172-20-1-170.ec2.internal",
            "private_ip": "172.20.1.170",
            "public_dns": "ec2-107-22-100-12.compute-1.amazonaws.com",
            "public_ip": "107.22.100.12",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tf_eip",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "tf_eip",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.tf_ec2_instance",
            "aws_security_group.tf_ec2_sg",
            "aws_subnet.tf_public_subnet",
            "aws_vpc.tf_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tf_ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0557a15b87f6559cf",
            "arn": "arn:aws:ec2:us-east-1:772320319753:instance/i-091dae7d2d1be0fa7",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-091dae7d2d1be0fa7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08e572fcfc8d0c03d",
            "private_dns": "ip-172-20-1-170.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.20.1.170",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-000ad3b9b6698ecab",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0e41678d7d18dde93"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08280d7b90f0f0c73",
            "tags": {
              "Name": "tf_ec2_instance",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "tf_ec2_instance",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e41678d7d18dde93"
            ]
          },
          "dependencies": [
            "aws_security_group.tf_ec2_sg",
            "aws_subnet.tf_public_subnet",
            "aws_vpc.tf_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:772320319753:internet-gateway/igw-01ef027927ec67545",
            "id": "igw-01ef027927ec67545",
            "owner_id": "772320319753",
            "tags": {
              "Name": "tf_igw",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "tf_igw",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0118426752ac3589b"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:772320319753:route-table/rtb-0889e3f9619803619",
            "id": "rtb-0889e3f9619803619",
            "owner_id": "772320319753",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01ef027927ec67545",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf_public_route_table",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "tf_public_route_table",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0118426752ac3589b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tf_igw",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf_public_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0494a32db2daff7e6",
            "route_table_id": "rtb-0889e3f9619803619",
            "subnet_id": "subnet-08280d7b90f0f0c73"
          },
          "dependencies": [
            "aws_internet_gateway.tf_igw",
            "aws_route_table.tf_public_route_table",
            "aws_subnet.tf_public_subnet",
            "aws_vpc.tf_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:772320319753:security-group/sg-0e41678d7d18dde93",
            "description": "Security group for ec2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e41678d7d18dde93",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "tf_ec2_sg",
            "name_prefix": "",
            "owner_id": "772320319753",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf_ec2_sg",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "tf_ec2_sg",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0118426752ac3589b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:772320319753:subnet/subnet-08280d7b90f0f0c73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.20.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08280d7b90f0f0c73",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "772320319753",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf_public_subnet",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "tf_public_subnet",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0118426752ac3589b"
          },
          "dependencies": [
            "aws_vpc.tf_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:772320319753:vpc/vpc-0118426752ac3589b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-0ca3f917ed3d6e15d",
            "default_route_table_id": "rtb-0b1be3a51c7b89a51",
            "default_security_group_id": "sg-01bc92fa8879eb0ff",
            "dhcp_options_id": "dopt-028d3c074c1839054",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0118426752ac3589b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b1be3a51c7b89a51",
            "owner_id": "772320319753",
            "tags": {
              "Name": "tf_vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "tf_vpc",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}